src/sass/components/_code-box.scss
.code-editor,
.line-counter,
.backdrop {
  height: 50vh;
  resize: none;
}

.code-editor,
.line-counter {
  height: 50vh;
}

.code-editor,
.backdrop {
  width: 94%;
}

.code-editor {
  background-color: transparent;
  z-index: 2;
  border: .1rem solid $primary-border-color;
  // border-top-right-radius: 2em;
  border-bottom-right-radius: 2em;
}


.backdrop{
  background-color: white;
  z-index: -999;
  overflow: auto;
  position: absolute;
  text-align: left;
  border: .1rem solid transparent;
  // border-top-right-radius: 2em;
  border-bottom-right-radius: 2em;
}

mark {
  border-radius: 3px;
  color: transparent;
  background-color: red;
}

.highlights{
  position: absolute;
  left: 4%;
}

.line-counter {
  width: 6%;
  border: .1rem solid $primary-border-color;
  border-right: .1rem solid $black;
  // border-top-left-radius: 2rem;
  border-bottom-left-radius: 2rem;
}

.code-box, 
.backdrop {
  // margin-top: -11vh;
  @media (max-width: 40px) {
    margin: 0;
  }

  @media (max-width: 105rem) and (min-width: 40rem) {
    margin: 0 max(2vh, 2vw) 0 max(2vh, 2vw);
  }

  @media (min-width: 105rem) {
    margin: 0 auto;
    width: 160rem;
  }

  &:hover .code-editor,
  &:hover .line-counter {
    border: .1rem solid $primary-border-color;
    box-shadow: $hover-box-shadow;
  }

  &:focus-within .code-editor,
  &:focus-within .line-counter {
    border: .1rem solid $primary-border-color;
    outline: rgba($white, .5) solid .2rem;
    box-shadow: $active-box-shadow;
  }

}

